--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Crumbs</string>
     <string name="action_settings">Settings</string>
+    <string name="facebook_app_id">1523295254631998</string>
+
 </resources>
