--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="title_activity_com_parse_ui_parse_signup_fragment">
         ComParseUiParseSignupFragmentActivity
     </string>
+    <string name="title_activity_splash_screen">SplashScreen</string>
 
 </resources>
